--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.12",
     "@mui/x-charts": "^6.19.5",
+    "@nextui-org/react": "^2.2.10",
+    "@prisma/client": "^5.11.0",
+    "framer-motion": "^11.0.12",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.11.26",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
@@ -27,7 +30,9 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prettier": "3.2.5",
+    "prisma": "^5.11.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   }
 }
